Bug 337887 - File with unsupported format shows default thumbnail and can't set wallpaper
Summary: File with unsupported format shows default thumbnail and can't set wallpaper
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-29 20:11 UTC by soee
Modified: 2014-10-22 22:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Thumbnail for unsupported image formats (1.08 MB, image/png)
2014-07-29 20:12 UTC, soee
Details
screenshot of problem in master (84.51 KB, image/png)
2014-10-16 10:12 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description soee 2014-07-29 20:11:22 UTC
If we go desktop settings and change wallpapper by setting unsupported image format than we will see default imag ethumbnail on the list and if we select and apply it, we have only black background on desktop without image set. Please check attached file.

You can easily reproduce it by for example picking .xcf file and setting it as a wallpaper.
Comment 1 soee 2014-07-29 20:12:14 UTC
Created attachment 88022 [details]
Thumbnail for unsupported image formats
Comment 2 Bhushan Shah 2014-07-31 12:09:06 UTC
Yes this  is expected, it shows image thumbnail when it can not generate thumbnail, what is unusual that you think should be changed?
Comment 3 soee 2014-07-31 13:01:42 UTC
Hi, thank you for your answer.

In case we have invalid image format selected, shouldn't we be informed about it with some message and just don't create this default thumbnail (if image format is not supported/allowed just don't add anything and inform user about it)?

How can i remove this default thumbnails from the preview grid ?
Comment 4 Harald Sitter 2014-07-31 13:23:20 UTC
At the very very very least it should show the file path as a tooltip, otherwise you don't even know where the stuff comes from. That's probably a general thing with wallpapers outside a wallpaper package though I guess.
Comment 5 soee 2014-08-03 15:57:20 UTC
I did a fresh installation of Plasma 5 and Kubuntu 14.10. If i now open dekstop settings i see 3 "unknown" wallpapers (default thumbs), so thers something wrong with it :)
Comment 6 Harald Sitter 2014-08-04 07:48:48 UTC
That sounds more like a missiong kio-extras dependency which would be a packaging issue.
Comment 7 Marco Martin 2014-10-16 09:11:36 UTC
does this still happen?
Comment 8 Harald Sitter 2014-10-16 10:12:56 UTC
Created attachment 89158 [details]
screenshot of problem in master

yes, still happens

I really think there simply should be a tooltip telling what the file path is and maybe if at all possible an error from kio. Would at least help me loads already :P
Comment 9 soee 2014-10-16 10:33:26 UTC
I can also confirm this problem.
Comment 10 David Edmundson 2014-10-22 22:08:41 UTC
Git commit 9081355a4c1f58602078144fbb6b6bb54e8e51d7 by David Edmundson.
Committed on 22/10/2014 at 22:02.
Pushed by davidedmundson into branch 'master'.

Only list image types that we can actually open in wallpaper selection dialog

Use QImageReader::supportedMimeTypes() to list appropriate types
FIXED-IN: 5.2

M  +12   -1    wallpapers/image/image.cpp

http://commits.kde.org/plasma-workspace/9081355a4c1f58602078144fbb6b6bb54e8e51d7