Only list image types that we can actually open in wallpaper selection dialog

Use QImageReader::supportedMimeTypes() to list appropriate types

BUG: 337887
FIXED-IN: 5.2